@@ -437,7 +437,7 @@ export class Game {
     this.postUpdate(0);
 
     // this.prestigeManager.maxCards = 70
-    // this.prestigeManager.lockedCars = false;
+    this.prestigeManager.lockedCars = false;
     // this.darkMatter = new Decimal(1e20);
     // this.prestigeManager.experience = new Decimal(1e4);
   }
